objects/Gong__Agenda__c.object
<CustomObject>
    <fields>
        <fullName>Gong__Duration_Percent__c</fullName>
        <description>duration of agenda item, out of the entire call, percentage wise.</description>
        <label>Structure Part Duration (Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gong__Duration_sec__c</fullName>
        <description>duration in seconds</description>
        <label>Structure Part Duration (Sec.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__End_Min__c</fullName>
        <formula>IF( Gong__End_Time_Sec__c &gt;=3600,  TEXT(FLOOR(Gong__End_Time_Sec__c / 3600))&amp;&quot;:&quot; , &quot;&quot;)
&amp; 
TEXT(FLOOR(MOD(Gong__End_Time_Sec__c ,3600)/600)) &amp; 
TEXT(FLOOR(MOD(Gong__End_Time_Sec__c ,600)  / 60))
&amp; &quot;:&quot; &amp;
TEXT(FLOOR(MOD(Gong__End_Time_Sec__c ,60)/10)) &amp; 
TEXT(FLOOR(MOD(Gong__End_Time_Sec__c ,10)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End (Min.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__End_Time_Sec__c</fullName>
        <label>End Time (Sec.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Structure</relationshipLabel>
        <relationshipName>Agenda_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gong__Index__c</fullName>
        <label>Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Start_Min__c</fullName>
        <formula>IF( Gong__Start_Time_Sec__c &gt;=3600,  TEXT(FLOOR(Gong__Start_Time_Sec__c/ 3600))&amp;&quot;:&quot; , &quot;&quot;)
&amp; 
TEXT(FLOOR(MOD(Gong__Start_Time_Sec__c,3600)/600)) &amp; 
TEXT(FLOOR(MOD(Gong__Start_Time_Sec__c,600)  / 60))
&amp; &quot;:&quot; &amp;
TEXT(FLOOR(MOD(Gong__Start_Time_Sec__c,60)/10)) &amp; 
TEXT(FLOOR(MOD(Gong__Start_Time_Sec__c,10)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start (Min.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Start_Time_Sec__c</fullName>
        <label>Start Time (Sec.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Structure</label>
    <nameField>
        <label>Structure Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Structure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>